feat: F29 Workflow Configuration — dynamic roles, types, statuses from DB
Complete F29 implementation: all hardcoded roles (SA/DEV/QA), issue types,
and status mappings replaced with DB-driven workflow configuration.

Backend: WorkflowConfigService, Admin API, PublicConfigController,
MappingAutoDetectService, JSONB converters, Role enum removed.
Frontend: WorkflowConfigContext, WorkflowConfigPage, all components
use dynamic iteration via Object.entries().

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>